# Cpp-Shorts

./: .gitignore  README.md
AnonymousObjects/: CMakeLists.txt  main.cpp
CustomDataTypeSerialization/: CMakeLists.txt  Person.cpp  Person.h  main.cpp
GetLanguageStandard/: CMakeLists.txt  main.cpp
VariableInitialization/: CMakeLists.txt  main.cpp
